--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@babel/parser": "^7.23.6",
     "@remix-run/node": "^2.4.0",
     "@remix-run/react": "^2.4.0",
     "@remix-run/serve": "^2.4.0",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "highlight.js": "^11.9.0",
+    "html-react-parser": "^5.0.11",
+    "install": "^0.13.0",
     "isbot": "^3.7.1",
+    "prettier": "^3.1.1",
+    "prismjs": "^1.29.0",
     "react": "latest",
     "react-dom": "latest",
     "react-dom/server": "react-dom/server"
