--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "devDependencies": {
     "@mdx-js/rollup": "^3.0.0",
     "@remix-run/dev": "^2.4.0",
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "tailwindcss": "^3.4.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
